<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Driver Mate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="by_name">An AADL Application</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_home">Hi there!!! What do you want to do?</string>
    <string name="update_location_server">Update Location Server</string>
    <string name="map">Map</string>
    <string name="music">Play Music</string>
    <string name="call_tab">Call Using Contacts in Tablet</string>
    <string name="speech">Activate Speech Recognition</string>
    <string name="paytoll">Pay Toll</string>
    <string name="net">Check For Wi-Fi</string>
    <string name="title_activity_gpslocation_sender">GPSLocationSender</string>

</resources>
